@startuml
'https://plantuml.com/class-diagram

Game --> HeroAircraft
HeroAircraft --> HeroAircraft

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + getInstance():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + getDirection():int
    + getShootNum():int
    + getPower():int
    + increaseShootNum():void
    + resetShootNum(int num):void

}

class Game{
    - heroAircraft:HeroAircraft
    + Game()
}
@enduml